Document PPDG/src/objects/Asset_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Asset_Tag__c</fullName>
        <description>Unique Asset identifier</description>
        <label>Asset Tag</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Assigned_to__c</fullName>
        <description>Who or what role is the asset assigned to</description>
        <label>Assigned to</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <description>Brand of the product manufacturer</description>
        <label>Brand</label>
        <picklist>
            <picklistValues>
                <fullName>Acer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gateway</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Packard Bell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hewlett-Packard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lenovo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Samsung Electronics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brother</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Konica Minolta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kyocera</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lexmark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OKI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Olivetti</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ricoh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Samsung</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Epson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TVS Electronics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Xerox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Microsoft</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Computer_Name__c</fullName>
        <label>Computer Name</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <label>Cost including VAT</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_including_VAT__c</fullName>
        <label>Cost including VAT</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Device_Type__c</fullName>
        <label>Device Type</label>
        <picklist>
            <picklistValues>
                <fullName>Desktop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AiO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laptop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Surface</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dock - Surface</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dock - PC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desk Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MFP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MFD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Projector</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TV</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IT_Component_Specification__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IT Component Specification</label>
        <referenceTo>IT_Component_Specification__c</referenceTo>
        <relationshipLabel>Asset Details</relationshipLabel>
        <relationshipName>Asset_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Installation_Date__c</fullName>
        <description>The date the IT Component was first installed</description>
        <label>Installation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Installed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The user who installed the product</description>
        <label>Installed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Asset_Details1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>Location</description>
        <label>Location</label>
        <picklist>
            <picklistValues>
                <fullName>Contact Centre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East Ham</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Edgware Road</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Head Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HPP Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leicester</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manchester</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premier Banking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Small Heath</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Whitechapel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Knightsbridge</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Manufacturer__c</fullName>
        <label>Manufacturer</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <label>Model</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operating_System__c</fullName>
        <label>Operating System</label>
        <picklist>
            <picklistValues>
                <fullName>Win 10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Win 8.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Win 8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Win 7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XP</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Purchase_Date__c</fullName>
        <label>Purchase Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Purchase_Order_Number__c</fullName>
        <inlineHelpText>Please ensure a copy of the PO is uploaded via notes and attachments</inlineHelpText>
        <label>Purchase Order Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Serial_Number__c</fullName>
        <label>Serial Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Discount__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Any Discount applied to RRP Net for the purchase</description>
        <label>Supplier Discount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <description>List of current Suppliers</description>
        <label>Supplier</label>
        <picklist>
            <picklistValues>
                <fullName>Misco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Keltec</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kelway</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Update_Date__c</fullName>
        <formula>Installation_Date__c +
CASE( IT_Component_Specification__r.Update_Cycle_Years__c ,
&quot;1&quot;,  365,
&quot;2&quot;,  730,
&quot;3&quot;,  1095,
&quot;4&quot;, 1460,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Update Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Asset_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Asset Detail</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Asset_Tag__c</columns>
        <columns>Device_Type__c</columns>
        <columns>Computer_Name__c</columns>
        <columns>Location__c</columns>
        <columns>User__c</columns>
        <columns>Assigned_to__c</columns>
        <columns>Operating_System__c</columns>
        <columns>Serial_Number__c</columns>
        <columns>Manufacturer__c</columns>
        <columns>Model__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>AssetDetail{0000}</displayFormat>
        <label>Asset Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Asset Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>